--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,16 @@
 <resources>
-    <string name="app_name">MyFirstApp</string>
+    <string name="app_name">Gambler\'s Tap</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
+    <string name="main_fragment_label">Work hard!</string>
+    <string name="gamble_fragment_label">Gamble harder!</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="number">
-        0
-    </string>
-    <string name="toast_button">
-        Toast
-    </string>
-    <string name="info">Here is a random number between 0 and %d.</string>
-    <string name="random">Random</string>
-    <string name="count">Count</string>
+    <string name="score_pref_tag">score</string>
+
+    <string name="toast_button">TO DO</string>
+    <string name="info">You just gambled %d points!</string>
+    <string name="gamble">Gamble</string>
+    <string name="tap">Tap</string>
 </resources>
